--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Etherball - Decentralized Lottery</title>
+    <title>Eth Raffle Donation - P2D (Play 2 Donate)</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Donateball 🎟️</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Eth Raffle Donation 🎟️</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,8 +47,8 @@
 
     <header class="bg-primary text-white">
       <div class="container text-center">
-        <h1>Play Donateball!</h1>
-        <p class="lead">The current nonprofit jackpot is 0.125 eth, or ~$<span id="poolPrice"></span>.</p>
+        <h1>Play Eth Raffle !</h1>
+        <p class="lead">The current nonprofit donation jackpot is 0.125 eth, or ~$<span id="poolPrice"></span>.</p>
       </div>
     </header>
 
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h1>Donate For A Ticket</h1>
+            <h1>Donate ETH For A Ticket</h1>
             <p class="lead">Each ticket is only 0.005 eth. At current prices, that's ~$<span id="ticketPrice"></span>.</p>
             <div style="text-align:center;">
               <button class="btn btn-primary" id="buyTicket1" type="button">Ticket 1</button>
@@ -95,12 +95,12 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h1>FAQ</h1>
-            <h4>What is Donateball?</h4>
-            <p class="lead">Donateball is a nonprofit lottery built on top of the Etherum blockchain. Because of its decentralized nature, Etherball is completely controlled by the blockchain, so payments and ticket-donations is secured with the power of millions of computers around the world.</p>
+            <h4>What is Eth Raffle Donation?</h4>
+            <p class="lead">Eth Raffle Donation is a nonprofit raflle built on top of the Etherum blockchain. Because of its decentralized nature, Eth Raffle Donation is completely controlled by the blockchain, so payments and ticket-donations is secured with the power of millions of computers around the world.</p>
             <h4>Why should I trust it?</h4>
             <p class="lead">You're free (and encouraged) to check out the source code at (etherscan link here). If you have any questions or concerns feel free to contact me using the links at the bottom of the page.</p>
             <h4>How can I use Donateball?</h4>
-            <p class="lead">The easiest way to use Donateball is to download the Metamask wallet <a href="https://metamask.io">here</a>, send your Metamask wallet some ether using an exchange of sorts, and choosing a ticket to buy at the top of the page.</p>
+            <p class="lead">The easiest way to use Eth Raffle Donation is to download the Metamask wallet <a href="https://metamask.io">here</a>, send your Metamask wallet some ether using an exchange of sorts, and choosing a ticket to buy at the top of the page.</p>
             <h4>My transaction isn't going through. Why?</h4>
             <p class="lead">Try raising your gas limit for the transaction. Don't worry if it seems high; most of the times, the gas limit isn't even reached. Also, it's possible that someone else just donated for the ticket that you clicked on and the website or blockchain didn't update yet. Try choosing a different ticket.</p>
             <h4>Why so few tickets?</h4>
@@ -117,7 +117,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Previous Winners</h2>
-            <p class="lead">Donateball has just launched - stay tuned for more updates!</p>
+            <p class="lead">Eth Raffle Donation has just launched - stay tuned for more updates!</p>
           </div>
         </div>
       </div>
